--- a/example_full.yaml
+++ b/example_full.yaml
@@ -17,26 +17,29 @@ mikan:
     简体: "(简体|简中|简日|CHS)"
     繁体: "(繁体|繁中|繁日|CHT|Baha)",
     1080p: "(X1080|1080P)",
-    非合集: "^(?!(\d{2}-\d{2}|合集))",
+    非合集: "^(?!.*(\d{2}-\d{2}|合集)).*",
   filters: # 表达式名，可选，用于过滤番剧，不符合表达式的番剧将不会被下载(无视大小写匹配)
     - 1080p
     - 非合集
     
 notification: # 通知设置，可选
-  telegram: 
+  telegram: # tg通知设置
     bot_token: your_token
     user_id: your_id
-  anpush:
+  anpush: # anpush推送, 目前收费，不建议使用
     token: your_token
     channel: 
       - channel_id1
       - channel_id2
 
 rename: # 重命名设置，可选
-  chatgpt:
+  # gpt和正则二选一，优先使用gpt
+  chatgpt: # 使用chatgpt解析资源名
     api_key: sk-xxx
     base_url: https://example.com/v1
     model: gpt-3.5-turbo
+
+  regex: ~ # 使用正则表达式解析资源名
 
 dev: # 开发设置，可选
   log_level: INFO
