--- a/example_full.yaml
+++ b/example_full.yaml
@@ -1,5 +1,5 @@
 common:
-  interval_time: 300 # 定时执行的间隔时间，单位为秒，0 为只运行一次
+  interval_time: 300 # 定时执行的间隔时间，单位为秒，须>=0
   proxies: # 代理设置，可选
     http: http://127.0.0.1:7890
     https: http://127.0.0.1:7890
