--- a/example_full.yaml
+++ b/example_full.yaml
@@ -15,12 +15,13 @@ mikan:
   subscribe_url: https://mikanani.me/RSS/MyBangumi?token=xxx # 蜜柑订阅链接
   regex_pattern: # 自定义正则表达式，可选（以下规则已内置，可通过自定义覆盖）
     简体: "(简体|简中|简日|CHS)"
-    繁体: "(繁体|繁中|繁日|CHT|Baha)",
-    1080p: "(X1080|1080P)",
-    非合集: "^(?!.*(\d{2}-\d{2}|合集)).*",
+    繁体: "(繁体|繁中|繁日|CHT|Baha)"
+    1080p: "(X1080|1080P)"
+    非合集: "^(?!.*(\\d{2}-\\d{2}|合集)).*"
   filters: # 表达式名，可选，用于过滤番剧，不符合表达式的番剧将不会被下载(无视大小写匹配)
     - 1080p
     - 非合集
+
     
 notification: # 通知设置，可选
   telegram: # tg通知设置
