feat: 重构extractor; 实现更多字段的提取及重命名支持

--- a/example_full.yaml
+++ b/example_full.yaml
@@ -1,55 +1,44 @@
 common:
-  interval_time: 300 # 定时执行的间隔时间，单位为秒，须>=0
-  proxies: # 代理设置，可选
+  interval_time: 300
+  proxies:
     http: http://127.0.0.1:7890
     https: http://127.0.0.1:7890
 
 alist:
-  base_url: http[s]://www.example.com # alist访问链接
+  base_url: http[s]://www.example.com
   # base_url: http://127.0.0.1:port
-  token: alist-xxx # Alist令牌；可在"管理员后台->设置->其他"中找到
-  downloader: aria2 # 下载器，可选项为aria2和qBittorrent
-  download_path: Onedrive/Anime # 下载路径，相对于alist根目录
+  token: alist-xxx
+  downloader: aria2
+  download_path: Onedrive/Anime
 
 mikan:
-  subscribe_url: https://mikanani.me/RSS/MyBangumi?token=xxx # 蜜柑订阅链接
-  regex_pattern: # 自定义正则表达式，可选（以下规则已内置，可通过自定义覆盖）
+  subscribe_url: https://mikanani.me/RSS/MyBangumi?token=xxx
+  regex_pattern:
     简体: "(简体|简中|简日|CHS)"
     繁体: "(繁体|繁中|繁日|CHT|Baha)"
     1080p: "(X1080|1080P)"
     非合集: "^(?!.*(\\d{2}-\\d{2}|合集)).*"
-  filters: # 表达式名，可选，用于过滤番剧，不符合表达式的番剧将不会被下载(无视大小写匹配)
+  filters:
     - 1080p
     - 非合集
-
     
-notification: # [可选]通知设置
-  telegram: # tg通知设置
+notification:
+  telegram:
     bot_token: your_token
     user_id: your_id
-  anpush: # anpush推送, 目前收费，不建议使用
+  anpush:
     token: your_token
     channel: 
       - channel_id1
       - channel_id2
 
-rename: # [可选]重命名设置
-  # gpt和正则二选一，优先使用gpt
-  chatgpt: # 使用chatgpt解析资源名
+rename: 
+  chatgpt: 
     api_key: sk-xxx
-    base_url: https://example.com/v1 # [可选]不填则默认为openai官方
-    model: gpt-3.5-turbo # [可选]不填则默认为gpt-3.5-turbo
-
-  regex: ~ # 使用正则表达式解析资源名
-
-  # [可选]自定义重命名格式
-  ## 暂时支持的变量有：
-  ## name：番剧名
-  ## season：季度
-  ## episode：集数
-  ## ext：文件后缀
-  ## fansub：字幕组
+    base_url: https://example.com/v1
+    model: gpt-3.5-turbo
+  regex: ~
   rename_format: "{name} S{season:02d}E{episode:02d}.{ext}"
 
-dev: # [可选]开发设置
+dev:
   log_level: INFO
