--- a/example.yaml
+++ b/example.yaml
@@ -5,8 +5,10 @@ alist:
   base_url: http[s]://www.example.com # alist访问链接
   # base_url: http://127.0.0.1:port
   token: alist-xxx # Alist令牌；可在"管理员后台->设置->其他"中找到
-  downloader: aria2 # 下载器，可选项为aria2和qBittorrent
+  downloader: qBittorrent # 下载器，可选项为aria2和qBittorrent
   download_path: Onedrive/Anime # 下载路径，相对于alist根目录
-
+  
 mikan:
   subscribe_url: https://mikanani.me/RSS/MyBangumi?token=xxx # 蜜柑订阅链接
+  filters:
+    - 非合集
