improve: 修改通知逻辑为定时运行，避免过度调用api

--- a/example_full.yaml
+++ b/example_full.yaml
@@ -28,9 +28,9 @@ notification:
   telegram:
     bot_token: your_token
     user_id: your_id
-
   pushplus: 
     token: xxxxx
+  interval_time: 300
 
 rename: 
   chatgpt: 
