--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "openai==1.7.0",
     "pyyaml>=6.0.1",
     "loguru>=0.7.2",
+    "tenacity>=9.0.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
