--- a/.github/workflows/publish_docker.yml
+++ b/.github/workflows/publish_docker.yml
@@ -41,6 +41,12 @@ jobs:
         run: |
           echo "Version: ${{ steps.get_version.outputs.version }}"
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -54,4 +60,6 @@ jobs:
           file: docker/Dockerfile
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: twosix26/alist-mikananirss:v${{ steps.get_version.outputs.version }}
+          tags: |
+            twosix26/alist-mikananirss:v${{ steps.get_version.outputs.version }}
+            twosix26/alist-mikananirss:latest
