--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "alist-mikananirss"
-version = "0.1.5"
+version = "0.1.6"
 description = "Automatically fetch anime updates from the Mikan Project's RSS feed and offline download them to the cloud drive through Alist."
 authors = [
     { name = "TwoSix", email = "ljj2288@gmail.com" }
@@ -14,6 +14,7 @@ dependencies = [
     "pyyaml>=6.0.1",
     "loguru>=0.7.2",
     "tenacity>=9.0.0",
+    "aiosqlite>=0.20.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
