--- a/tests/common/test_config.yaml
+++ b/tests/common/test_config.yaml
@@ -1,16 +1,41 @@
-# same as readme
 common:
   interval_time: 300
+  # 缺少非必选项proxies
 
 alist:
-  base_url: https://example.com # 修改为你的alist访问地址
-  token: alist-xxx # 修改为你的alist token；可在"管理员后台->设置->其他"中找到
-  downloader: qBittorrent # 或者 aria2
-  download_path: Onedrive/Anime # 修改为你的下载路径，相对于alist根目录
+  base_url: http[s]://www.example.com
+  token: your_token
+  downloader: aria2
+  download_path: Onedrive/Anime
 
 mikan:
-  subscribe_url:
-    - https://mikanani.me/RSS/MyBangumi?token=xxx # 修改为你的蜜柑订阅地址
+  subscribe_url: 
+    - https://mikanani.me/RSS/MyBangumi?token=xxx
+    - https://mikanani.me/RSS/rss2
+  regex_pattern:
+    简体: "(简体|简中|简日|CHS)"
+    繁体: "(繁体|繁中|繁日|CHT|Baha)"
+    1080p: "(X1080|1080P)"
+    非合集: "^(?!.*(\\d{2}-\\d{2}|合集)).*"
+  filters:
+    - 1080p
+    - 非合集
+    
+notification:
+  telegram:
+    bot_token: your_token
+    user_id: your_id
+  # 缺少非必选项pushplus
+  interval_time: 300
 
-filters:
-  - 非合集
+rename: 
+  chatgpt: 
+    api_key: sk-xxx
+    base_url: https://example.com/v1
+    model: gpt-3.5-turbo
+  rename_format: "{name} S{season:02d}E{episode:02d} {fansub}"
+  remap: 
+    enable: trues
+
+dev:
+  log_level: INFO
