--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,13 +1,19 @@
-FROM python:3.12-alpine3.20
+FROM ghcr.io/astral-sh/uv:python3.12-alpine
+
+ADD . /
 
 WORKDIR /
 
 RUN apk add --no-cache gcc musl-dev linux-headers rust cargo && \
-    pip install --no-cache-dir alist-mikananirss && \
-    mkdir /data && \
+    uv sync --frozen --no-cache && \
     apk del gcc musl-dev linux-headers rust cargo && \
-    rm -rf /var/cache/apk/*
+    uv cache clean && \
+    rm -rf \
+        /var/cache/apk/* \
+        /root/.cache \
+        /tmp/*
+
 
 ENV CONFIG_PATH /config.yaml
 
-CMD ["sh", "-c", "python -m alist_mikananirss --config $CONFIG_PATH"]
+CMD ["/bin/sh", "-c", "uv run alist-mikananirss --config $CONFIG_PATH"]
