feat: 简单支持tgbot添加rss下载任务

--- a/example_full.yaml
+++ b/example_full.yaml
@@ -43,5 +43,9 @@ rename:
     enable: trues
     cfg_path: "remap.yaml"
 
+bot_assistant:
+  telegram:
+    bot_token: your_token
+
 dev:
   log_level: INFO
