chore: 优化config单元测试

--- a/tests/common/test_config_valid.yaml
+++ b/tests/common/test_config_valid.yaml
@@ -1,9 +1,8 @@
 common:
   interval_time: 300
-  # 缺少非必选项proxies
 
 alist:
-  base_url: http[s]://www.example.com
+  base_url: http://127.0.0.1:5244
   token: your_token
   downloader: aria2
   download_path: Onedrive/Anime
@@ -12,11 +11,6 @@ mikan:
   subscribe_url: 
     - https://mikanani.me/RSS/MyBangumi?token=xxx
     - https://mikanani.me/RSS/rss2
-  regex_pattern:
-    简体: "(简体|简中|简日|CHS)"
-    繁体: "(繁体|繁中|繁日|CHT|Baha)"
-    1080p: "(X1080|1080P)"
-    非合集: "^(?!.*(\\d{2}-\\d{2}|合集)).*"
   filters:
     - 1080p
     - 非合集
@@ -25,8 +19,6 @@ notification:
   telegram:
     bot_token: your_token
     user_id: your_id
-  # 缺少非必选项pushplus
-  interval_time: 300
 
 rename: 
   chatgpt: 
@@ -36,6 +28,3 @@ rename:
   rename_format: "{name} S{season:02d}E{episode:02d} {fansub}"
   remap: 
     enable: trues
-
-dev:
-  log_level: INFO
