--- a/example_full.yaml
+++ b/example_full.yaml
@@ -37,7 +37,7 @@ rename:
   chatgpt: 
     api_key: sk-xxx
     base_url: https://example.com/v1
-    model: gpt-3.5-turbo
+    model: gpt-4o-mini
   rename_format: "{name} S{season:02d}E{episode:02d}"
   remap: 
     enable: trues
