--- a/example.yaml
+++ b/example.yaml
@@ -1,15 +1,16 @@
 common:
-  interval_time: 300 # 定时执行的间隔时间，单位为秒，须>=0
+  interval_time: 300
 
 alist:
-  base_url: http[s]://www.example.com # alist访问链接
-  # base_url: http://127.0.0.1:port
-  token: alist-xxx # Alist令牌；可在"管理员后台->设置->其他"中找到
-  downloader: qBittorrent # 下载器，可选项为aria2和qBittorrent
-  download_path: Onedrive/Anime # 下载路径，相对于alist根目录
-  
+  base_url: https://example.com # 修改为你的alist访问地址
+  token: alist-xxx # 修改为你的alist token；可在"管理员后台->设置->其他"中找到
+  downloader: qBittorrent # 或者 aria2
+  download_path: Onedrive/Anime # 修改为你的下载路径(Alist中的路径)
+
 mikan:
-  subscribe_url: 
-    - https://mikanani.me/RSS/MyBangumi?token=xxx
+  subscribe_url:
+    - https://mikanani.me/RSS/MyBangumi?token=xxx # 修改为你的蜜柑订阅地址
+    # - https://mikanani.me/RSS/MyBangumi?token=xxx2 # 多条RSS订阅链接情况
+
   filters:
-    - 非合集
+    - 非合集 # 程序暂不支持合集等形式的重命名，若使用重命名功能推荐使用此过滤器
